fix(frontend): fix z-index issues

--- a/packages/frontend/src/components/connect-button/styles.module.css
+++ b/packages/frontend/src/components/connect-button/styles.module.css
@@ -13,7 +13,7 @@
 }
 
 .overlay {
-    @apply z-20
+    @apply z-30
         fixed
         top-0
         bottom-0
@@ -25,7 +25,7 @@
 .accountMenuHorizontal {
     @apply hidden
         sm:flex
-        z-20
+        z-30
         fixed
         top-0
         bottom-0
@@ -35,7 +35,7 @@
 .accountMenuVertical {
     @apply sm:hidden
         flex
-        z-20
+        z-30
         max-h-[600px]
         fixed
         left-0
