--- a/packages/frontend/src/components/network-select/styles.module.css
+++ b/packages/frontend/src/components/network-select/styles.module.css
@@ -29,7 +29,7 @@
 }
 
 .overlay {
-    @apply z-20
+    @apply z-30
         flex
         sm:hidden
         fixed
